# esp32-ssd1306-lvgl-monochrome

./: .gitignore  README.md
main/: CMakeLists.txt  esp_interrupt.c  esp_interrupt.h  i2c_oled_example_main.c  idf_component.yml  lvgl_demo_ui.c  lvgl_ui.c  lvgl_ui.h  main.c  main.h
main/display/: display_config.c  display_config.h  logo_large.c  logo_small.c  lvgl_ui.c  lvgl_ui.h  ui_font_SS52.c
main/hardware/: button.c  button.h
main/peripherals/: gpio_config.c  gpio_config.h
ui/squareline output/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/squareline output/SquareLine_Project/: Timer.sll  Timer.spj
ui/squareline output/SquareLine_Project/assets/: ui_font_S52.fcfg  ui_font_SS52.fcfg
ui/squareline output/fonts/: ui_font_S52.c  ui_font_SS48.c  ui_font_SS52.c
ui/squareline output/screens/: ui_Screen1.c  ui_mainScreen.c
